--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Idellette",
-            "email": "idellettesom@yahoo.fr"
+            "email": "xxxxx@xxxxx"
         }
     ],
     "require": {}
